--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\tensorflow\\python.exe"
+    "python.pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\tensorflow\\python.exe",
+    // "python.autoComplete.extraPaths": [
+    //     "~/src/model",
+    // ],
 }
