--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,20 @@
 {
     "python.pythonPath": "C:\\ProgramData\\Miniconda3\\envs\\tensorflow\\python.exe",
     "python.testing.pytestArgs": [
-        "src"
+        "tests"
     ],
-    "python.testing.unittestEnabled": false,
+    "python.testing.unittestEnabled": true,
     "python.testing.nosetestsEnabled": false,
-    "python.testing.pytestEnabled": true,
+    "python.testing.pytestEnabled": false,
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true,
+    "python.testing.unittestArgs": [
+        "-v",
+        "-s",
+        "./src",
+        "-p",
+        "test*.py"
+    ],
     // "python.autoComplete.extraPaths": [
     //     "~/src/model",
     // ],
